# codealchemy

./: README.md
amosutopp/: main.cpp  trajectory_analysis
amosutopp/cli/: compile.sh  mycli
amosutopp/devel/: CMakeLists.txt  Makefile  analysis_mpi.cpp  analysis_test  compile.sh  main.cpp  mpi_handler.cpp  mpi_handler.hpp  read_trj  read_trj.cpp  read_trj_mpi.cpp  spherical_qpoints.cpp  trajectory_handler.cpp  trajectory_handler.hpp
amosutopp/devel/analysis/: analysis.hpp  main_rdf.cpp  msd_analysis.cpp  msd_analysis.hpp  perform_analysis.cpp  perform_analysis.hpp  rdf.cpp  rdf.cu  rdf.hpp  rdf_analysis.cpp  rdf_analysis.hpp  rmsd_analysis.cpp  rmsd_analysis.hpp
amosutopp/devel/cfiles/: compile.sh  dcd_data  dcd_data.cpp  dcd_data_set_topology  dcd_data_set_topology.cpp  dcd_only  dcd_only.cpp  main
amosutopp/devel/fft/: compare.py  last.py  msd.py  msd_nofft.py  new.py  second_moment.py
amosutopp/devel/simple_read/: compare  compare_vector_vs_boost.cpp  compare_vector_vs_multiarray.cpp  compile.sh  read_trj  read_trj.cpp
amosutopp/mpi/: CMakeLists.txt  main.cpp
amosutopp/mpi/devel/: CMakeLists.txt  compile.sh  generate_qpoints  main  main copy.cpp  main.cpp  spherical_qpoints  spherical_qpoints copy.py  spherical_qpoints.cpp  spherical_qpoints.py
amosutopp/mpi/devel/std_vs_boost/: bench.cpp  compare  compare_vector_vs_boost.cpp  compile.sh
amosutopp/mpi/src/: base.cpp  base.hpp  command1.cpp  command1.hpp  command2.cpp  command2.hpp  command3.cpp  command3.hpp  density.cpp  density.hpp  qpoints.cpp  qpoints.hpp
amosutopp/mpi/src/utils/: parallel.cpp  parallel.hpp
amosutopp/new_cli/: compile.sh
amosutopp/transport/: compile.sh  msd.cpp
amosutopp/universe/: Base.cpp  Base.hpp  Density.cpp  Density.hpp  Universe.cpp  Universe.hpp  compile.sh  main.cpp
fortran-quickstart-tutorial/: allocatable  allocatable.f90  arithmetic  arithmetic.f90  array  array.f90  block  block.f90  float  float.f90  hello  hello.f90  read_value  read_value.f90  slice  slice.f90  string_array  string_array.f90  variables  variables.f90  your_module.mod
learn_cpp/chap_1/: a.out  hw.cpp
nanobind_scft/: CMakeLists.txt  dist.py  rho_q.c  rho_q.cpp  rho_q.h  rho_q.py  rho_q.pyx  rho_q_cython.py  rho_q_nano.py  rho_q_nb.py  rho_q_wrapper.pyx  scft-2.py  scft-3.py  scft.py  setup.py
pairwise_distances/: run.sh
pairwise_distances/c/: build.sh  main.c  pdists  pdists.c
pairwise_distances/cuda/: pdists  pdists.cu
pairwise_distances/fortran/: analysis.txt  build.sh  gmon.out  main.f90  main.opt.yaml  main.optrpt  main.py  pairwise.mod  pairwise_module.f90  pairwise_module.opt.yaml  pairwise_module.optrpt  pdists
pairwise_distances/python/: serial.py  (+3 more)
rho_q_asarray/: Cargo.toml  pyproject.toml
rho_q_cython/: rho_q.cpp  rho_q.pxd  rho_q.pyx  rho_q_cpp.cpp  rho_q_cpp.hpp  setup.py
rho_q_rust/: Cargo.toml  pyproject.toml  test.py
rho_q_rust/src/: lib.rs
(+38 files in other folders)
