[package]
name = "rho_q_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rho_q_rust"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.21"
num-complex = "0.4"
rayon = "1.7"

[dependencies.pyo3]
version = "0.21.1"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
